# ai-lead-intake-bitrix24

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.cursor/rules/: git_rules.md  project_rules.md  python_fastapi_rules.md  security_rules.md  testing_rules.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  epic_audit_task.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  sonar.yml
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: __init__.py  admin.py  intake.py
app/db/: __init__.py  init_db.py  session.py
app/integrations/: __init__.py  bitrix24_client.py  llm_client.py
app/models/: __init__.py  ai_classification.py  base.py  bitrix_entity.py  enums.py  (+4 more)
config/: field_mapping.yaml  routing.yaml
demo_data/: sample_requests.json
docs/: ai_lead_intake_bitrix24_tz_v1_0.md  architecture.md  bitrix24_trial_runbook.md  demo_script.md  demo_walkthrough.md  github_issues_plan.md  github_workflow.md  implementation_plan.md  notion_case.md  project_brief.md  project_status.md  release_note.md  screenshots_capture_checklist.md  screenshots_plan.md
scripts/: seed_demo_data.py
tests/: __init__.py  test_admin_dashboard.py  test_ai_classifier.py  test_bitrix_service.py  test_config.py  test_health.py  test_intake_api.py  test_models.py  test_routing_engine.py  test_schemas.py  test_security_hygiene.py  test_state_machine.py  test_worker.py
(+53 files in other folders)
